# fastapi-admin-panel

./: .gitignore  README.md  hatch_build.py  pyproject.toml
.claude/: settings.local.json
examples/: admin.py  main_async.py
fastapi_admin_panel/: __init__.py  alembic_helpers.py  config.py  panel.py
fastapi_admin_panel/api/: __init__.py  crud.py  crud_async.py  router.py  system_router.py
fastapi_admin_panel/auth/: __init__.py  deps.py  models.py  router.py  utils.py
fastapi_admin_panel/discovery/: __init__.py  alembic_parser.py  model_inspector.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: FieldInput.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  select.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  ModelForm.tsx  ModelList.tsx  SystemUsers.tsx
frontend/src/types/: index.ts
scripts/: build.py
