[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-fastapi-admin-panel"
version = "0.1.1"
description = "Drop-in admin panel for FastAPI + SQLAlchemy projects. Auto-discovers your models via Alembic, provides full CRUD, JWT auth, and a dark React UI — integrated in 3 lines."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["fastapi", "admin", "sqlalchemy", "alembic", "crud", "panel", "dashboard"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.110.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiofiles>=23.0.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "uvicorn[standard]",
    "psycopg2-binary",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
build-admin-frontend = "scripts.build:main"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_admin_panel"]
artifacts = ["fastapi_admin_panel/static"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
